wildfly-swarm/lab2/src/main/fabric8/inventory-db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: swarm-inventory-database-lab2
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    deploymentconfig: swarm-inventory-database-lab2
  type: LoadBalancer
