wildfly-swarm/lab2/src/main/fabric8/inventory-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: swarm-inventory-lab2
  annotations:
    description: Inventory Service based on WF Swarm
    service.alpha.openshift.io/dependencies: '[{"name":"swarm-inventory-database-lab2","namespace":"","kind":"Service"}]'
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    deploymentconfig: swarm-inventory-lab2
  type: LoadBalancer
